--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.8"
+      "express": ">= 4.0.0"
     , "jade": ">= 0.0.1"
     , "mongoose": ">= 3.8.0"
+    , "body-parser": ">= 0.0.0"
+    , "errorhandler": ">= 0.0.0"
   }
 }
